@@ -146,4 +146,5 @@ MOSQ_2.1 {
 	global:
 		mosquitto_pre_connect_callback_set;
 		mosquitto_topic_matches_sub_with_pattern;
+		mosquitto_sub_matches_acl;
 } MOSQ_1.7;
