@@ -30,6 +30,7 @@ _mosquitto_pub_topic_check
 _mosquitto_realloc
 _mosquitto_set_username
 _mosquitto_strdup
+_mosquitto_sub_matches_acl
 _mosquitto_sub_topic_check
 _mosquitto_topic_matches_sub
 _mosquitto_topic_matches_sub_with_pattern
