@@ -31,6 +31,7 @@
 	mosquitto_realloc;
 	mosquitto_set_username;
 	mosquitto_strdup;
+	mosquitto_sub_matches_acl;
 	mosquitto_sub_topic_check;
 	mosquitto_topic_matches_sub;
 	mosquitto_topic_matches_sub_with_pattern;
